kube/services/netpolicy/networkpolicy_arranger_dashboard_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-arranger-dashboard
spec:
  podSelector:
    matchLabels:
      app: fence
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: arranger-dashboard
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: esproxy
  policyTypes:
   - Ingress
   - Egress
